[package]
name = "shelly"
version = "0.1.0"
authors = ["Alex Manning <alex41290@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Generate dynamic-, scripting-language projects with dependencies for quick CLI feedback loops"
repository = "https://github.com/rawhat/shelly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
os_pipe = "0.9"
